# dublin-bikes-forecast

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  conftest.py  index.html  pyproject.toml
.github/workflows/: poll.yml
data/quality/: 2026-07-21.parquet  2026-07-22.parquet  2026-07-23.parquet
data/raw/: 2026-07-21.parquet  2026-07-22.parquet  2026-07-23.parquet
data/stations/: stations.parquet
data/weather/: archive.parquet
docs/specs/: 2026-07-22-phase4-scoreboard.md
ledger/: gate.json  latest.json  summary.json
ledger/forecasts/: 2026-07-22.csv  2026-07-23.csv  2026-07-24.csv
ledger/outcomes/: 2026-07-22.csv
models/v1/: bike.joblib  climatology.json  dock.joblib  manifest.json
ops/: RUNBOOK.md  issue_vm.sh  poll_vm.sh  recover.sh  score_vm.sh
reports/p2/: REPORT.md  metrics.json
scoring/: eligibility.py
scripts/: download_archive.py  freeze_model.py  issue_forecasts.py  run_p2.py  score_forecasts.py  write_latest.py
src/bikes/: archive.py  backtest.py  baselines.py  dataset.py  features.py  forecast.py  gbfs.py  grid.py  labels.py  live.py  poll.py  quality.py  score.py  store.py  weather.py  windows.py
tests/: test_archive.py  test_backtest.py  test_baselines.py  test_dataset.py  test_eligibility.py  test_entry_scripts.py  test_forecast.py  test_gbfs.py  test_grid.py  test_live.py  test_p4.py  test_poll.py  test_quality.py  test_score.py  test_store.py  test_weather.py  test_windows.py
tests/fixtures/: archive_new_format.csv  archive_old_format.csv  ckan_package.json  open_meteo_archive.json  station_information.json  (+1 more)
(+6 files in other folders)
