[project]
name = "dublin-bikes-forecast"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "pyarrow>=15.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
