[project]
name = "dublin-bikes-forecast"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "pyarrow>=15.0", "scikit-learn>=1.4", "holidays>=0.40", "matplotlib>=3.8", "tzdata"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
